blockml/test/errors/03_view/e224/e224.view
view: e224
table: 1
fields:
- filter: f1
  result: from_field
  from_field: dim1   


